plaatnotes: Fix dialog issues add admin user hijack login option
